--- a/login.html
+++ b/login.html
@@ -129,12 +129,12 @@
             </div>
         </div>
         <div class="right-section">
-            <h2>Student Login</h2>
-            <p>Hey enter your details to sign in to your account</p>
+            <h2>User Login</h2>
+            <p>Hey enter your details to log in to your account!</p>
             <form id="login-form">
                 <input type="text" id="username" placeholder="Enter your username/email" required>
                 <input type="password" id="password" placeholder="Enter your password" required>
-                <button type="submit" class="login-btn">Login In</button>
+                <button type="submit" class="login-btn">Login</button>
             </form><br><br><br><br>
             <p>Having trouble signing in?</p>
             <div class="social-login">
